修改部分UI问题以及直播流量弹窗透明问题

--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -360,9 +360,7 @@
     <string name="dialog_title_live_stop">直播已停止</string>
     <string name="dialog_title_bind_phone">请完善手机信息</string>
 
-    <string name="about_yizhibo_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;易视云是一款专注于移动视频直播的互联网4.0最前沿社交APP。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;实时的直播分享，时间没有上限，内容可共享至微信、微博、QQ等社交平台,
-        既可以公开给所有人，也可仅限你的好友们观看和互动。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;云端保存，既不占你的本地空间，又不会丢失你任何一刻的精彩。还可以一键即焚，播后也可不留痕迹。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;极低的流量消耗，
-        通过极限低码率的视频压缩，为流量环境下的直播和观看最大限度的省钱。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;不论你是想炫耀、猎奇、交友，赚钱，需要生活消费还是资讯获取，都可以来这个多屏互动的社交直播平台。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在这里，所有人都公平的获得展现真实自我的机会，易视云，把你捧到世界面前。\n\n
+    <string name="about_yizhibo_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;火眼财经为四川火眼财讯科技有限公司（简称“火眼财讯”）旗下产品。火眼财讯定位于泛财经领域第一垂直直播平台，是由四川星空奇迹科技有限公司（简称“星空奇迹”）和成都每日经济新闻报社有限公司（简称“每日经济新闻”）共同创办。火眼财讯依托于合作方星空奇迹在视频直播领域的丰富行业经验及背景资源，以及每日经济新闻强大的内容生产能力，专注于泛财经领域的视频直播。
     </string>
     <string name="yihzibo_copyright">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;易视云为深圳云聚汇数码有限公司旗下的一款移动直播分享的软件平台，在平台上会员或其发布的有关直播信息均由会员自行提供，会员依法对其提供的任何信息承担全部责任。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;任何单位或个人认为易视云平台的内容可能涉嫌侵犯其合法权益，应该及时书面通知本公司，并应对书面通知陈述之真实性负责。我们在收到相关信息后，将会依法尽快移除或限制相关涉嫌侵权的内容。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;易视云平台尊重合法版权，反对侵权盗版。转发及分享内容并不意味易视云赞同其部分文字或作品等侵害了您的权益，请您立即与易视云联系，易视云将尽快予以解决。\n\n</string>
     <string name="submit_no_content">对不起，您没有填写反馈内容，请重试</string>
@@ -583,4 +581,6 @@
     <string name="test_new">测试测试测试测试测试测试测试测试是测试测试测试测试测试测试测试测试测试测试测试测试是测试测试测试测试</string>
     <string name="my_live">我的直播</string>
 
+    <string name="copy_right">v1.0.1 Copyright©2016</string>
+    <string name="compony_name">四川火眼财讯科技有限公司</string>
 </resources>
