--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -587,4 +587,6 @@
     <string name="start_group_chat">发起群聊</string>
     <string name="set_pw_6to12">设置新密码，输入6~20位密码</string>
     <string name="city_selected">城市选择</string>
+    <string name="not_more">没有更多了～</string>
+    <string name="register_account">注册账户</string>
 </resources>
