--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -362,7 +362,7 @@
 
     <string name="about_yizhibo_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;火眼财经为四川火眼财讯科技有限公司（简称“火眼财讯”）旗下产品。火眼财讯定位于泛财经领域第一垂直直播平台，是由四川星空奇迹科技有限公司（简称“星空奇迹”）和成都每日经济新闻报社有限公司（简称“每日经济新闻”）共同创办。火眼财讯依托于合作方星空奇迹在视频直播领域的丰富行业经验及背景资源，以及每日经济新闻强大的内容生产能力，专注于泛财经领域的视频直播。
     </string>
-    <string name="yihzibo_copyright">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;易视云为深圳云聚汇数码有限公司旗下的一款移动直播分享的软件平台，在平台上会员或其发布的有关直播信息均由会员自行提供，会员依法对其提供的任何信息承担全部责任。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;任何单位或个人认为易视云平台的内容可能涉嫌侵犯其合法权益，应该及时书面通知本公司，并应对书面通知陈述之真实性负责。我们在收到相关信息后，将会依法尽快移除或限制相关涉嫌侵权的内容。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;易视云平台尊重合法版权，反对侵权盗版。转发及分享内容并不意味易视云赞同其部分文字或作品等侵害了您的权益，请您立即与易视云联系，易视云将尽快予以解决。\n\n</string>
+    <string name="yihzibo_copyright">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;火眼财经为火眼财讯科技有限公司旗下的一款基于移动端的直播分享软件平台，在平台上会员或其发布有关直播信息均由会员自行提供，会员依法对其提供的任何信息承担全部责任。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;任何单位或个人认为火眼财经平台的内容可能涉嫌侵合法权益，应该及时书面通知本公司，并应对书面通知陈述之真实性负责。我们在收到相关信息后，将会依法尽快移除或限制相关涉嫌侵权的内容。\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 火眼财经平台尊重合法版权，反对侵权盗版。转发及分容并不意味本平台赞同其部分文字或作品等侵害了您的权益，请您立即与我们联系，我们将尽快予以解决。</string>
     <string name="submit_no_content">对不起，您没有填写反馈内容，请重试</string>
     <string name="submit_error_str">对不起，提交失败，请稍候重试</string>
     <string name="submit_ok">您的反馈已收到，感谢您的支持，我们会尽快解决您的问题！</string>
@@ -581,7 +581,7 @@
     <string name="test_new">测试测试测试测试测试测试测试测试是测试测试测试测试测试测试测试测试测试测试测试测试是测试测试测试测试</string>
     <string name="my_live">我的直播</string>
 
-    <string name="copy_right">v1.0.1 Copyright©2016</string>
+    <string name="copy_right">Copyright©2016</string>
     <string name="compony_name">四川火眼财讯科技有限公司</string>
     <string name="video_new">视频</string>
     <string name="start_group_chat">发起群聊</string>
