1. 个人中心，布局有问题 2. 个人中心，列表点击区域错误 3. 个人中心，标签管理(功能完成， 界面还需要调整)

--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -760,5 +760,8 @@
     <string name="user_cash_in_protocol">用户充值协议</string>
     <string name="default_sign">火眼助你成为财经大师</string>
     <string name="certificate">执业证号</string>
+    <string name="my_label">我的标签</string>
     <string name="certificate_hint">请完善您的证券执业资格号</string>
+
+    <string name="user_not_vip">该用户不是会员无法查看资料</string>
 </resources>
