--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -764,4 +764,5 @@
     <string name="certificate_hint">请完善您的证券执业资格号</string>
 
     <string name="user_not_vip">该用户不是会员无法查看资料</string>
+    <string name="login_info_expired">当前登录信息已过期，请重新登录</string>
 </resources>
