1.编辑自选股 2.添加自选股 3.自选股新闻 4.修改其他一些问题

--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -769,5 +769,6 @@
     <string name="image_text_live_has_not_started_my">牛人快来直播吧</string>
 
     <string name="user_stock_nothing">你还没有添加自选哦</string>
+    <string name="added">已添加</string>
 
 </resources>
