1.单删自选股 2.添加自选股选择状态

--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -770,6 +770,8 @@
 
     <string name="user_stock_nothing">你还没有添加自选哦</string>
     <string name="added">已添加</string>
+    <string name="add_stock_success">添加自选成功</string>
+    <string name="delect_stock_sucess">删除自选成功</string>
     <string name="user_not_login">您还没有登录哦</string>
 
 </resources>
