--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -773,5 +773,6 @@
     <string name="add_stock_success">添加自选成功</string>
     <string name="delect_stock_sucess">删除自选成功</string>
     <string name="user_not_login">您还没有登录哦</string>
+    <string name="press_to_exit">再按一次退出火眼财经</string>
 
 </resources>
