要闻列表不同类型界面和逻辑

--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -784,6 +784,8 @@
     <string name="news_speed">快讯</string>
     <string name="news_slecte">自选</string>
     <string name="news_specil">专栏</string>
+    <string name="topic">专题</string>
+    <string name="powerful_person">牛人推荐</string>
 
     <string name="market_stock">自选</string>
     <string name="market_chinese">沪深</string>
