--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -791,4 +791,5 @@
     <string name="market_chinese">沪深</string>
     <string name="market_hk">港股</string>
     <string name="market_global">全球</string>
+    <string name="focus">人关注</string>
 </resources>
