1 修复用户信息保存问题 2 修改文章详情 底部界面 3 修复 文章 收藏问题

--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -649,7 +649,7 @@
     <string name="share">分享</string>
     <string name="all">全部</string>
     <string name="refresh">刷新</string>
-    <string name="stock_detail_chat_hint">来一起讨论吧</string>
+    <string name="stock_detail_chat_hint">来评论一下吧~</string>
     <string name="up_list_title">涨幅榜</string>
     <string name="down_list_title">跌幅榜</string>
     <string name="live_loading_prompt">直播加载中</string>
