--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -688,7 +688,7 @@
     <string name="search_live_empty_prompt">很抱歉，没有相关信息</string>
     <string name="search_stock_empty_prompt">很抱歉，没有相关信息</string>
     <string name="search_empty_prompt">请输入搜索关键词！</string>
-    <string name="watch_count">%s人看</string>
+    <string name="watch_count">%s人观看</string>
     <string name="living">直播中</string>
     <string name="my_sum">我的余额</string>
     <string name="my_message">消息提醒</string>
