--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -817,5 +817,12 @@
     <string name="user_login_info">点击登录 更多精彩</string>
     <string name="user_history_watch">观看历史</string>
     <string name="user_history_read">阅读历史</string>
+    <string name="user_follow">+关注</string>
+    <string name="user_followed">已关注</string>
+    <string name="user_living">直播</string>
+    <string name="user_secret">秘籍</string>
+    <string name="user_article">文章</string>
+    <string name="user_fans">粉丝</string>
+    <string name="user_text_follow_count">%s人参与</string>
 
 </resources>
