--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -799,6 +799,10 @@
     <string name="market_global">全球</string>
     <string name="focus">人关注</string>
 
+    <string name="live_live_video">视频</string>
+    <string name="live_image_text">图文</string>
+    <string name="live_good_video">精品</string>
+
     //emptyView
     <string name="empty_net_error">网络不稳定 请刷新重试</string>
     <string name="empty_net_refresh">重新刷新</string>
