--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -235,7 +235,7 @@
     <string name="live_switch_camera_rear">后置镜头</string>
     <string name="live_shoot_thumb">拍摄封面</string>
     <string name="live_set_thumb_tip">拍摄一张漂亮帅气的封面</string>
-    <string name="live_title_default">%1$s正在直播，赶紧进来看</string>
+    <string name="live_title_default">%1$s直播中</string>
     <string name="share_live_content">%1$s正在直播中，快来围观点赞。</string>
     <string name="share_video_content">%1$s的直播已经错过啦，不要错过回放哦。</string>
     <string name="share_mine_live_content">%1$s的直播开始了，快来围观点赞。</string>
@@ -810,21 +810,25 @@
     <string name="empty_no_data">暂时没有数据哦</string>
     <string name="network_error">网络不给力哦~</string>
     <string name="empty_no_fans">您还没有粉丝噢</string>
-    <string name="empty_no_vipfans">Ta还没有粉丝噢</string>
-    <string name="empty_no_user_colloct">Ta还没有收藏资讯噢</string>
-    <string name="empty_no_vipcheats">Ta还没有发布过秘籍噢</string>
-    <string name="empty_no_vipliving">Ta还没有发布过直播噢</string>
-    <string name="empty_no_viparticle">Ta还没有发布过文章噢</string>
-    <string name="empty_no_user_comment">Ta还没有发布过评论噢</string>
+    <string name="empty_no_vipfans">TA还没有粉丝噢</string>
+    <string name="empty_no_user_colloct">TA还没有收藏资讯噢</string>
+    <string name="empty_no_vipcheats">TA还没有发布过秘籍噢</string>
+    <string name="empty_no_vipliving">TA还没有发布过直播噢</string>
+    <string name="empty_no_viparticle">TA还没有发布过文章噢</string>
+    <string name="empty_no_user_comment">TA还没有发布过评论噢</string>
     <string name="empty_user_comment">您还没有发布过评论噢</string>
     <string name="empty_no_focus">您还没有关注的人噢</string>
-    <string name="empty_no_userfocus">Ta还没有关注的人噢</string>
+    <string name="empty_no_userfocus">TA还没有关注的人噢</string>
     <string name="empty_no_collect">您还没有收藏资讯噢</string>
     <string name="empty_no_watch">您还没有收看视频/直播噢</string>
     <string name="empty_no_read">您还没有看过任何资讯噢</string>
-    <string name="empty_no_living">您还没有直播噢</string>
+    <string name="empty_no_living">您还没有发布过直播噢</string>
     <string name="empty_no_cheats">您还没有发布秘籍噢</string>
-    <string name="empty_no_article">您还没有文章噢</string>
+    <string name="empty_no_article">您还没有发布过文章噢</string>
+    <string name="empty_no_cheats_now">秘籍暂时还未开通噢</string>
+    <string name="empty_no_buy_good_video">您还没有购买过精品视频噢</string>
+    <string name="empty_no_buy_living">您还没有购买过直播视频噢</string>
+    <string name="empty_no_buy_cheats">您还没有购买过秘籍噢</string>
 
     //个人中心
     <string name="user_center">用户中心</string>
@@ -847,12 +851,19 @@
     <string name="user_text_follow_count">%s人参与</string>
     <string name="user_myfans">我的粉丝</string>
     <string name="user_myfoucs">我的关注</string>
-    <string name="user_tafans">Ta的粉丝</string>
-    <string name="user_tafoucs">Ta的关注</string>
+    <string name="user_tafans">TA的粉丝</string>
+    <string name="user_tafoucs">TA的关注</string>
     <string name="opreat_fail">操作失败</string>
     <string name="unfollow_success">取消关注成功</string>
     <string name="user_praise_success">点赞成功</string>
     <string name="user_praise_cancel">取消点赞成功</string>
+    <string name="user_clean_succuss">清空记录成功</string>
+    <string name="user_clean_fail">清空记录失败</string>
+    <string name="user_clean_news_sure">确定要清除所有历史阅读记录</string>
+    <string name="user_clean_watch_sure">确定要清除所有历史观看记录</string>
+    <string name="user_sure">确定</string>
+    <string name="user_cancel">取消</string>
+    <string name="user_logout_sure">确定要退出登录吗</string>
 
     //直播界面
     <string name="player_pay_tip">&#160;&#160;&#160;&#160;当前为付费直播\n点击购买马上加入</string>
