--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -817,6 +817,7 @@
     <string name="empty_no_vipliving">TA还没有发布过直播噢</string>
     <string name="empty_no_viparticle">TA还没有发布过文章噢</string>
     <string name="empty_no_user_comment">TA还没有发布过评论噢</string>
+    <string name="empty_video_no_comment">还没有人发布过评论噢</string>
     <string name="empty_user_comment">您还没有发布过评论噢</string>
     <string name="empty_no_focus">您还没有关注的人噢</string>
     <string name="empty_no_userfocus">TA还没有关注的人噢</string>
@@ -877,5 +878,8 @@
     <string name="live_pay">付费</string>
     <string name="live_pay_tips">请输入直播价格(火眼豆)</string>
     <string name="ready_to_live">准备直播中...</string>
+    <string name="video_introduce_text">简介</string>
+    <string name="video_watch_count">%s人观看</string>
+    <string name="video_watch_count2">%s万人观看</string>
 
 </resources>
