--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -886,4 +886,9 @@
     <string name="video_input_chat">加入聊天吧</string>
     <string name="video_relative">相关视频</string>
 
+    //新闻界面
+    <string name="news_unlike">不喜欢</string>
+    <string name="hot_comment">热门评论</string>
+    <string name="news_all_comment">全部评论（%1$d）</string>
+
 </resources>
