--- a/elapp/src/main/res/values/strings.xml
+++ b/elapp/src/main/res/values/strings.xml
@@ -801,6 +801,7 @@
     <string name="market_hk">港股</string>
     <string name="market_global">全球</string>
     <string name="focus">人关注</string>
+    <string name="user_focus">关注</string>
 
     <string name="live_live_video">直播</string>
     <string name="live_image_text">图文</string>
